--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/c">web builder</a></section><section class="features3 cid-r4MKdkBvkN" id="features3-5">
+<section class="engine"><a href="https://mobiri.se/g">how to build a website</a></section><section class="features3 cid-r4MKdkBvkN" id="features3-5">
 
     
 
@@ -61,7 +61,7 @@
                         <img src="assets/images/adventure-ball-shaped-blur-346885-676x451.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7"><p>&nbsp; &nbsp; Travel&nbsp;<br></p></h4>
+                        <h4 class="card-title mbr-fonts-style display-7"><p>Travel Website&nbsp;<br></p></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Mobirise is an easy website builder - just drop site elements to your page, add content and style it to look the way you like.
                         </p>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
-                            Education&nbsp;</h4>
+                            Education Website&nbsp;</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             All sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site.
                         </p>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
-                            Conference&nbsp;</h4>
+                            Conference Website&nbsp;</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Mobirise offers many site blocks in several themes, and though these blocks are pre-made, they are flexible.
                         </p>
@@ -187,7 +187,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="ksLmbEuoVPUt2lv5lWzjavP63ShX45OMXrQ+MMgm2dZn0q+EiKGR4vo2NZ09uFlfbitRxAPM9rLQ0WPiAUlhgfItCLMQpKaBf+ART/j8YnIcqUgAIla6P6RhXBDbSZ7U" data-form-email="true">
+                        <input type="hidden" value="o5duNz0TSnBlnTQb9jgA9kSaRI6qPnX+PwepDJMN7Rx49q+Qc964gwGIJ3Rw4WhQHmYCXS3tBEndJOJfVXbiYWqAUEpGW8HmwLoILDb7Rkcvh9Zxc75Z9hSrbeEdl6Bj" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer4-4">
                         </div>
