create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/g">how to build a website</a></section><section class="features3 cid-r4MKdkBvkN" id="features3-5">
+<section class="engine"><a href="https://mobiri.se/f">easy site builder</a></section><section class="features3 cid-r4MKdkBvkN" id="features3-5">
 
     
 
@@ -187,7 +187,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="o5duNz0TSnBlnTQb9jgA9kSaRI6qPnX+PwepDJMN7Rx49q+Qc964gwGIJ3Rw4WhQHmYCXS3tBEndJOJfVXbiYWqAUEpGW8HmwLoILDb7Rkcvh9Zxc75Z9hSrbeEdl6Bj" data-form-email="true">
+                        <input type="hidden" value="zF8+d7E2Bgvz+Ds2MTFYuyM7CpcGS5FfTbKXRw7fhRTOZUxW68kA+NaliUgThmWskoRg7xOQpyJsb2PYLdBkPtPBlQG0jarjbkWiZdpsWz+et3BvYjWZtOYcGy5rYnn3" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer4-4">
                         </div>
