--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/n">simple website templates</a></section><section class="features3 cid-r4MKdkBvkN" id="features3-5">
+<section class="engine"><a href="https://mobiri.se/n">free simple web templates</a></section><section class="features3 cid-r4MKdkBvkN" id="features3-5">
 
     
 
@@ -175,7 +175,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="ZHIJLSvQtGbwyj8JEWVKoS+jhwqXaYZGulegWXessBgvtwTCR3J98coPusnZwXkjdfG/5R6SsnBVz1D1/+bB+do/ZclhncLm+bTyIFiDBTkx9xjIAcWSaPI7mtVdu0EO" data-form-email="true">
+                        <input type="hidden" value="350EcE+fCz83MlIDU8GrOIYMacZcxTaeC3/1PAKEsUXgnn7GcuhBavddSTKJ7X3xNeT6uHGfr9fe41YA7OsN3YMM2mval5V/6/3wi90EuM6oNDAb4SdLxCtGIoRIpamD" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer4-4">
                         </div>
