--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/w">free html5 templates</a></section><section class="features3 cid-r4MKdkBvkN" id="features3-5">
+<section class="engine"><a href="https://mobiri.se/b">how to create a site</a></section><section class="features3 cid-r4MKdkBvkN" id="features3-5">
 
     
 
@@ -106,11 +106,9 @@
                             Mobirise offers many site blocks in several themes, and though these blocks are pre-made, they are flexible.
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center">
-                        <a href="https://mobirise.com" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://ashleighmaher.github.io/conference/" class="btn btn-primary display-4">
                             Learn More
-                        </a>
-                    </div>
+                        </a></div>
                 </div>
             </div>
 
@@ -187,7 +185,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="T93ZIsboAlv9MsQ0YiIM3bInhhXyOxvNPJNylKLBaCtBZF6OLvj/45BelH0xGJOqFa/w3Q7M38Ra06iZx4cmfikHMVd93O5S4IKHp1m7YulYyNy6m/LtzdIVrtztQd9W" data-form-email="true">
+                        <input type="hidden" value="cdSkkYunUttdGouDKoW9KTeCOtZHZThUjNc1lImoI8xBmWG7+bbLvhS+Yqawcsy5bB/gZWU4UnBALlDGUtN+6MEZUqTAB+mbBDTJ5uEP2yjw9sbF16t1eenKYDJ6C0vr" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer4-4">
                         </div>
