create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/b">how to create a site</a></section><section class="features3 cid-r4MKdkBvkN" id="features3-5">
+<section class="engine"><a href="https://mobiri.se/u">bootstrap html templates</a></section><section class="features3 cid-r4MKdkBvkN" id="features3-5">
 
     
 
@@ -185,7 +185,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="cdSkkYunUttdGouDKoW9KTeCOtZHZThUjNc1lImoI8xBmWG7+bbLvhS+Yqawcsy5bB/gZWU4UnBALlDGUtN+6MEZUqTAB+mbBDTJ5uEP2yjw9sbF16t1eenKYDJ6C0vr" data-form-email="true">
+                        <input type="hidden" value="4JB2L2mmxpCsu88n+4Jg0zw8OkX4cdo4MCcV5SJudZOkwyM/hdS+yNBXyWToAMOisYMiZ9bOpJ+q62TgWyBOVfW4lU64BB/QBb/mYHfeX3ESQnVZozInRa+td9jpn+pI" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer4-4">
                         </div>
