create github pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/b">how to create a site for free</a></section><section class="features3 cid-r4MKdkBvkN" id="features3-5">
+<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="features3 cid-r4MKdkBvkN" id="features3-5">
 
     
 
