--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,10 @@
 <H1>PORTFOLIO</H1>
 
 <h2>All the lights</h2>
-<a href="mobirise-light/index.html">Link1</a>
+<a href="mobirise-light/index.html">Link</a>
 
 <h2>Smooth Smoothies</h2>
-<a href="mobirise-smoothies/index.html">Link1</a>
+<a href="mobirise-smoothies/index.html">Link</a>
 
 <h2>Powerpoint</h2>
 <a href="portfolio/powerpoint">Link</a>
