--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		</div>
 	</nav>
 
-	<div class="jumbotron-home"></div>
+	<div class="jumbotron-home">
 		<div class="container">
 			<h1>Ashleigh Maher</h1>
 			<h2>Web Designer and Developer</h2>
