--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 		</div>
 	</nav>
 
-	<div class="jumbotron-home">
+	<div class="jumbotron-home"></div>
 		<div class="container">
 			<h1>Ashleigh Maher</h1>
 			<h2>Web Designer and Developer</h2>
-			<img src="img/background.jpg" alt="background">
+			
 	</div>
 
 	<div class="container container-section-home-page">
