--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
 		</div>
 	</nav>
 
-	<div class="jumbotron-home"></div>
+	<div class="jumbotron-home">
 		<div class="container">
 			<h1>Ashleigh Maher</h1>
 			<h2>Web Designer and Developer</h2>
-			
-	</div>
+			</div>
 
 	<div class="container container-section-home-page">
 		<h3>Hello, world!</h3>
