--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title> Ashleigh Maher | Home Page | Web Designer and Developer </title>
+	<title>Ashleigh Maher| Home Page | Web Designer and Developer</title>
 
 	<meta name="description" content="Welcome to my website where you will find examples of my work from my Diploma in Web Design course at IBAT College, Dublin.">
 
@@ -46,9 +46,10 @@
 
 	<div class="jumbotron-home">
 		<div class="container">
-			<h1>Ashleigh Maher</h1>
+			<h1>Mary Smith</h1>
 			<h2>Web Designer and Developer</h2>
-			</div>
+		</div>
+	</div>
 
 	<div class="container container-section-home-page">
 		<h3>Hello, world!</h3>
@@ -91,10 +92,9 @@
 
 				<div class="col-md-2">
 					<h4>CONTACT</h4>
-					<p><i class="fa fa-fw fa-envelope" aria-hidden="true"></i> &nbsp;<a href='mailto:ashleighmaher3@gmail.com'>Email</a></p>
-					<p><i class="fa fa-fw fa-github-square" aria-hidden="true"></i> &nbsp;<a href="https://ashleighmaher.github.io/portfolio" target="_blank">GitHub</a></p>
+					<p><i class="fa fa-fw fa-envelope" aria-hidden="true"></i> &nbsp;<a href='mailto:myname@protonmail.com'>Email</a></p>
+					<p><i class="fa fa-fw fa-github-square" aria-hidden="true"></i> &nbsp;<a href="https://ashleighmaher.github.io target="_blank">GitHub</a></p>
 					<p><i class="fa fa-fw fa-linkedin-square" aria-hidden="true"></i> &nbsp;<a href="https://www.linkedin.com/in/ashleigh-maher-662666116/" target="_blank">Linkedin</a></p>
-					<p><i class="fa fa-fw fa-twitter-square" aria-hidden="true"></i> &nbsp;<a href="https://www.twitter.com/username" target="_blank">Twitter</a></p>
 				</div><!-- /column -->
 
 			</div><!-- /row -->
