--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -86,7 +86,7 @@
 
 				<div class="col-md-8">
 					<h4>ABOUT ME</h4>
-					<p>Hi, I&#8217;m Mary Smith. I&#8217;m a web developer and designer.</p>
+					<p>Hi, I&#8217;m Ashleigh Maher. I&#8217;m a web developer and designer.</p>
 					<p>I created this website to showcase some of the projects I created and share what I have learnt on my journey.</p>
 				</div><!-- /column -->
 
