--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<div class="col-md-2">
 					<h4>CONTACT</h4>
 					<p><i class="fa fa-fw fa-envelope" aria-hidden="true"></i> &nbsp;<a href='mailto:ashleighmaher3@gmail.com'>Email</a></p>
-					<p><i class="fa fa-fw fa-github-square" aria-hidden="true"></i> &nbsp;<a href="https://ashleighmaher.github.io target="_blank">GitHub</a></p>
+					<p><i class="fa fa-fw fa-github-square" aria-hidden="true"></i> &nbsp;<a href="https://ashleighmaher.github.io/portfolio" target="_blank">GitHub</a></p>
 					<p><i class="fa fa-fw fa-linkedin-square" aria-hidden="true"></i> &nbsp;<a href="https://www.linkedin.com/in/ashleigh-maher-662666116/" target="_blank">Linkedin</a></p>
 				
 				</div><!-- /column -->
