--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item"><a class="nav-link active" href="index.html"><i class="fa fa-fw fa-home" aria-hidden="true"></i> &nbsp;Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="portfolio/index.html"><i class="fa fa-fw fa-file-text" aria-hidden="true"></i> &nbsp;Portfolio</a></li>
-					<li class="nav-item"><a class="nav-link" href="https://www.ibat.ie" target="_blank"><i class="fa fa-fw fa-graduation-cap" aria-hidden="true"></i> &nbsp;IBAT College</a></li>
 				</ul>
 				<a class="btn btn-get-in-touch" href="#get-in-touch"><i class="fa fa-envelope" aria-hidden="true"></i> &nbsp;Get in touch</a>
 			</div>
@@ -67,7 +66,7 @@
 
 	<div class="bg-highlight-light">
 		<div class="container container-get-in-touch" id="get-in-touch">
-			<p class="introduction">Interested in working together? Have a project you&#8217;d like to discuss? <br>Let&#8217;s chat <a  href='mailto:ashleighmaher3@gmail.com'>ashleighmaher3@gmail.com </a></p>
+			<p class="introduction">Interested in working together? Have a project you&#8217;d like to discuss? <br>Let&#8217;s chat <a  href='mailto:myname@protonmail.com'>myname@protonmail.com</a></p>
 		</div>
 	</div>
 
